# Promethium

./: .gitignore  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  verify_imports.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
charts/promethium/: Chart.yaml
docker/: backend.Dockerfile  docker-compose.monitor.yml  docker-compose.yml  environment.yml  frontend.Dockerfile  requirements.txt
docs/: api-reference.md  api.md  architecture.md  benchmarking.md  configuration.md  data-engineering.md  data-models.md  deployment-guide.md  developer-guide.md  docker-deployment.md  faq.md  glossary.md  kaggle-integration.md  methodology.md  ml-pipelines.md  notebooks-overview.md  ops-and-monitoring.md  overview.md  roadmap.md  ui-ux.md  user-guide.md
frontend/: nginx.conf
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.css  app.html  app.routes.ts
frontend/src/app/components/dataset-browser/: dataset-browser.css  dataset-browser.html  dataset-browser.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: error.interceptor.ts
frontend/src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/pages/job-submission/: job-submission.component.css  job-submission.component.html  job-submission.component.ts
frontend/src/app/pages/visualization/: visualization.component.css  visualization.component.html  visualization.component.ts
frontend/src/app/services/: upload.service.ts
notebooks/: 01_quickstart_basic_usage.ipynb  02_data_ingestion_and_quality_control.ipynb  03_signal_processing_basics.ipynb  04_matrix_completion_and_compressive_sensing.ipynb  05_deep_learning_unet_reconstruction.ipynb  06_gan_based_high_fidelity_reconstruction.ipynb  07_evaluation_metrics_and_visualization.ipynb  08_kaggle_and_colab_integration.ipynb  09_backend_api_and_job_system_demo.ipynb  10_end_to_end_case_study_synthetic_data.ipynb  11_end_to_end_case_study_real_world_data.ipynb  12_benchmarking_and_ablation_studies.ipynb  13_data_engineering_pipelines_and_batch_jobs.ipynb  14_advanced_model_customization_and_training.ipynb  15_troubleshooting_and_best_practices.ipynb
notebooks/kaggle/: 01_pipless_source_dataset_usage.ipynb  02_local_wheel_install.ipynb  03_auto_fallback_import.ipynb
src/promethium/: __init__.py  benchmark.py  py.typed
src/promethium/api/: main.py  schemas.py
src/promethium/api/routers/: datasets.py  jobs.py  ml.py
src/promethium/core/: config.py  database.py  exceptions.py  io.py  logging.py  models.py  schemas.py
src/promethium/evaluation/: __init__.py  metrics.py
src/promethium/io/: __init__.py  cloud.py  formats.py  readers.py  writers.py  zarr_wrapper.py
src/promethium/ml/: __init__.py  benchmark.py  data.py  inference.py  loss.py  metrics.py  models.py  pinns.py  train.py  training.py
src/promethium/ml/data/: dataset.py
src/promethium/ml/models/: autoencoder.py  base.py  registry.py  unet.py
src/promethium/pipelines/: __init__.py  recovery.py
src/promethium/processing/: deconvolution.py  denoising.py  filters.py
src/promethium/recovery/: deep_learning.py  matrix_completion.py
src/promethium/service/: main.py
src/promethium/signal/: __init__.py  deconvolution.py  filters.py  transforms.py
src/promethium/signal/reconstruction/: base.py  compressive_sensing.py  matrix_completion.py
src/promethium/utils/: __init__.py  reproducibility.py  synthetic.py  visualization.py
src/promethium/workflows/: tasks.py
tests/: test_core.py  test_ml.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: DatasetManager.tsx  JobManager.tsx
