[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promethium-seismic"
version = "1.0.3"
description = "Promethium - Advanced Seismic Data Recovery and Reconstruction Framework. State-of-the-art AI-driven framework for seismic signal reconstruction, denoising, and geophysical data enhancement."
authors = [{name = "Olaf Yunus Laitinen Imanov", email = "contact@promethium.dev"}]
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.10"
keywords = [
    "seismic",
    "geophysics",
    "reconstruction",
    "deep-learning",
    "signal-processing",
    "pytorch",
    "machine-learning",
    "earthquake",
    "seismic-data",
    "denoising",
    "data-recovery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# Core dependencies - lightweight for library usage
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "xarray>=2023.0",
    "obspy>=1.4.0",
    "segyio>=1.9.0",
    "torch>=2.0.0",
    "scikit-learn>=1.2.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Server dependencies for backend deployment
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "celery>=5.3.0",
    "redis>=4.6.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "httpx>=0.24.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

# Visualization dependencies
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Full installation with all optional dependencies
all = [
    "promethium[server,dev,viz]",
]

[project.urls]
Homepage = "https://github.com/olaflaitinen/Promethium"
Documentation = "https://github.com/olaflaitinen/Promethium#readme"
Repository = "https://github.com/olaflaitinen/Promethium"
Issues = "https://github.com/olaflaitinen/Promethium/issues"
Changelog = "https://github.com/olaflaitinen/Promethium/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["promethium*"]

[tool.setuptools.package-data]
promethium = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
